--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
         <header class="text-center mb-8">
             <h1 class="text-3xl sm:text-4xl font-bold text-sky-800">Vozes Verbais: Aprenda e Pratique</h1>
             <p class="text-slate-600 mt-2">Uma ferramenta interativa para dominar a gramática portuguesa.</p>
+            <a href="equação.html" class="inline-block mt-4 px-6 py-2 bg-amber-500 text-white font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors">
+                Ir para Matemática
+            </a>
         </header>
 
         <nav class="flex justify-center mb-8 bg-white p-2 rounded-lg shadow-sm">
