--- a/vozes.html
+++ b/vozes.html
@@ -48,9 +48,14 @@
         <header class="text-center mb-8">
             <h1 class="text-3xl sm:text-4xl font-bold text-sky-800">Vozes Verbais: Aprenda e Pratique</h1>
             <p class="text-slate-600 mt-2">Uma ferramenta interativa para dominar a gramática portuguesa.</p>
-            <a href="./matematica.html" class="inline-block mt-4 px-6 py-2 bg-amber-500 text-white font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors">
-                Ir para Matemática
-            </a>
+            <div class="flex flex-col sm:flex-row gap-2 justify-center mt-4">
+                <a href="index.html" class="inline-block px-6 py-2 bg-stone-400 text-white font-semibold rounded-lg shadow hover:bg-stone-500 transition-colors">
+                    ⬅ Voltar para o Início
+                </a>
+                <a href="matematica.html" class="inline-block px-6 py-2 bg-amber-500 text-white font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors">
+                    Ir para Matemática
+                </a>
+            </div>
         </header>
 
         <nav class="flex justify-center mb-8 bg-white p-2 rounded-lg shadow-sm">
