--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="matematica.html" class="menu-btn px-8 py-5 bg-amber-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
                 <span>🧮 Equação com fração - Mat I</span>
             </a>
-            <a href="ciencias.html" class="menu-btn px-8 py-5 bg-grenn-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
+            <a href="ciencias.html" class="menu-btn px-8 py-5 bg-green-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
                 <span>🪵 Biomassa e fontes de energia - Ciências</span>
             </a>
         </div>
