--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
             <a href="ciencias.html" class="menu-btn px-8 py-5 bg-green-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
                 <span>🪵 Biomassa e fontes de energia - Ciências</span>
             </a>
+            <a href="quadri.html" class="menu-btn px-8 py-5 bg-amber-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
+                <span>🧱 Angulos do quadrilatero - Mat 2</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
