--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <span>🪵 Biomassa e fontes de energia - Ciências</span>
             </a>
             <a href="quadri.html" class="menu-btn px-8 py-5 bg-amber-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
-                <span>🧱 Angulos do quadrilatero - Mat 2</span>
+                <span>🧱 Angulos do quadrilatero - Mat II</span>
             </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
