--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="quadri.html" class="menu-btn px-8 py-5 bg-amber-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
                 <span>🧱 Angulos do quadrilatero - Mat II</span>
             </a>
-            <a href="napo.html" class="menu-btn px-8 py-5 bg-amber-500 text-white text-xl font-semibold rounded-lg shadow hover:bg-amber-600 transition-colors flex items-center justify-center gap-3">
+            <a href="napo.html" class="menu-btn px-8 py-5 bg-red-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-red-700 transition-colors flex items-center justify-center gap-3">
                 <span>🏰 Era Napoleonica - História</span>
             </a>
            
