--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
             <a href="napo.html" class="menu-btn px-8 py-5 bg-red-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-red-700 transition-colors flex items-center justify-center gap-3">
                 <span>🏰 Era Napoleonica - História</span>
             </a>
+            <a href="ing.html" class="menu-btn px-8 py-5 bg-purple-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-purple-700 transition-colors flex items-center justify-center gap-3">
+                <span>🇬🇧 Simple - Inglês</span>
            
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
