up ingles no index

--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <a href="ing.html" class="menu-btn px-8 py-5 bg-purple-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-purple-700 transition-colors flex items-center justify-center gap-3">
                 <span>🇬🇧 Simple - Inglês</span>
             </a>
+             <a href="ing.html" class="menu-btn px-8 py-5 bg-sky-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-sky-700 transition-colors flex items-center justify-center gap-3">
+                <span>📚 Simple - Inglês</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
