--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
             <a href="sofia.html" class="menu-btn px-8 py-5 bg-green-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-green-800 transition-colors flex items-center justify-center gap-3">
                 <span>🧬 Ciências 7º Ano - Sofia</span>
             </a>
+            <a href="ique.html" class="menu-btn px-8 py-5 bg-pink-600 text-white text-xl font-semibold rounded-lg shadow hover:bg-pink-700 transition-colors flex items-center justify-center gap-3">
+                <span>🧩 Inequação - Mat II</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
