--- a/ique.html
+++ b/ique.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Iqueção - 8º Ano: Aprenda e Pratique</title>
+    <title>Inequação - 8º Ano: Aprenda e Pratique</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
@@ -46,8 +46,8 @@
     </div>
     <div class="container mx-auto max-w-4xl p-4 sm:p-8">
         <header class="text-center mb-8">
-            <h1 class="text-3xl sm:text-4xl font-bold text-sky-800">Iqueção - 8º Ano</h1>
-            <p class="text-slate-600 mt-2">Aprenda e pratique tudo sobre iqueção!</p>
+            <h1 class="text-3xl sm:text-4xl font-bold text-sky-800">Inequação - 8º Ano</h1>
+            <p class="text-slate-600 mt-2">Aprenda e pratique tudo sobre inequações!</p>
         </header>
 
         <nav class="flex justify-center mb-8 bg-white p-2 rounded-lg shadow-sm">
@@ -58,35 +58,43 @@
         <main>
             <section id="learn-section">
                 <div class="bg-white p-6 rounded-lg shadow">
-                    <h2 class="text-2xl font-bold mb-4 text-sky-700">O que é uma Iqueção?</h2>
-                    <p class="mb-6">Iqueção é um conceito matemático (ou de outra disciplina, conforme seu conteúdo) que envolve resolver problemas ou situações específicas. Aqui você vai aprender o que é, como identificar e como resolver iqueções passo a passo.</p>
+                    <h2 class="text-2xl font-bold mb-4 text-sky-700">O que é uma Inequação?</h2>
+                    <p class="mb-6">Inequação é uma sentença matemática que envolve uma incógnita e um sinal de desigualdade (&lt;, &gt;, ≤, ≥, ≠). O objetivo é encontrar os valores que tornam a desigualdade verdadeira.</p>
                     <div id="accordion-container" class="space-y-3">
                         <div class="border border-stone-200 rounded-lg">
                             <button class="accordion-button w-full p-4 text-left font-semibold text-lg flex justify-between items-center hover:bg-stone-50 transition-colors">
-                                <span>1. Definição de Iqueção</span>
+                                <span>1. Definição de Inequação</span>
                                 <span class="transform transition-transform duration-300 text-sky-600">&#9662;</span>
                             </button>
                             <div class="accordion-content">
                                 <div class="p-4 border-t border-stone-200 text-slate-700">
-                                    <p>Iqueção é ... (explique aqui o conceito de iqueção conforme o conteúdo que deseja abordar para o 8º ano).</p>
+                                    <p>
+                                        Uma inequação é uma expressão matemática que, ao invés de usar o sinal de igual (=), utiliza sinais de desigualdade:<br>
+                                        <strong>&lt;</strong> (menor), <strong>&gt;</strong> (maior), <strong>≤</strong> (menor ou igual), <strong>≥</strong> (maior ou igual), <strong>≠</strong> (diferente).<br>
+                                        <br>
+                                        <strong>Exemplo:</strong> <em>x + 2 &gt; 5</em>
+                                    </p>
                                 </div>
                             </div>
                         </div>
                         <div class="border border-stone-200 rounded-lg">
                             <button class="accordion-button w-full p-4 text-left font-semibold text-lg flex justify-between items-center hover:bg-stone-50 transition-colors">
-                                <span>2. Como Resolver uma Iqueção</span>
+                                <span>2. Como Resolver uma Inequação</span>
                                 <span class="transform transition-transform duration-300 text-sky-600">&#9662;</span>
                             </button>
                             <div class="accordion-content">
                                 <div class="p-4 border-t border-stone-200 text-slate-700">
-                                    <p>Passos para resolver uma iqueção:</p>
+                                    <p>Os passos são parecidos com os de uma equação, mas com atenção especial ao sinal de desigualdade:</p>
                                     <ul class="list-disc list-inside mt-2 space-y-1">
-                                        <li>Leia o enunciado com atenção.</li>
-                                        <li>Identifique o que está sendo pedido.</li>
-                                        <li>Monte a iqueção de acordo com o problema.</li>
-                                        <li>Resolva passo a passo, justificando cada etapa.</li>
-                                        <li>Verifique se a resposta faz sentido no contexto.</li>
+                                        <li>Isolar a incógnita (x) de um lado da inequação.</li>
+                                        <li>Se multiplicar ou dividir por número negativo, INVERTER o sinal da desigualdade!</li>
+                                        <li>Representar a solução na forma de intervalo ou reta numérica.</li>
                                     </ul>
+                                    <p class="mt-2"><strong>Exemplo:</strong> <br>
+                                        2x - 4 &lt; 6<br>
+                                        2x &lt; 10<br>
+                                        x &lt; 5
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -97,8 +105,31 @@
                             </button>
                             <div class="accordion-content">
                                 <div class="p-4 border-t border-stone-200 text-slate-700">
-                                    <p><strong>Exemplo 1:</strong> (Coloque aqui um exemplo de iqueção com resolução passo a passo.)</p>
-                                    <p><strong>Exemplo 2:</strong> (Outro exemplo para fixação.)</p>
+                                    <p><strong>Exemplo 1:</strong> <br>
+                                        x + 3 ≥ 7<br>
+                                        x ≥ 4<br>
+                                        <em>Solução: Todos os x maiores ou iguais a 4.</em>
+                                    </p>
+                                    <p class="mt-4"><strong>Exemplo 2:</strong> <br>
+                                        -2x &lt; 8<br>
+                                        x &gt; -4 <span class="text-xs">(lembre-se de inverter o sinal!)</span><br>
+                                        <em>Solução: Todos os x maiores que -4.</em>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="border border-stone-200 rounded-lg">
+                            <button class="accordion-button w-full p-4 text-left font-semibold text-lg flex justify-between items-center hover:bg-stone-50 transition-colors">
+                                <span>4. Representação na Reta Numérica</span>
+                                <span class="transform transition-transform duration-300 text-sky-600">&#9662;</span>
+                            </button>
+                            <div class="accordion-content">
+                                <div class="p-4 border-t border-stone-200 text-slate-700">
+                                    <p>
+                                        A solução de uma inequação pode ser representada na reta numérica ou em forma de intervalo.<br>
+                                        <strong>Exemplo:</strong> x &lt; 2<br>
+                                        <em>Intervalo:</em> (-∞, 2)
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -109,7 +140,7 @@
             <section id="practice-section" class="hidden">
                 <div class="bg-white p-6 rounded-lg shadow">
                     <h2 class="text-2xl font-bold mb-2 text-sky-700">Pratique suas habilidades!</h2>
-                    <p class="mb-6">Resolva as questões abaixo sobre iqueção e confira se você entendeu o conteúdo.</p>
+                    <p class="mb-6">Resolva as questões abaixo sobre inequações e confira se você entendeu o conteúdo.</p>
                     <div id="quiz-container">
                         <p id="question-progress" class="text-center font-semibold text-slate-600 mb-4"></p>
                         <div class="bg-stone-50 p-6 rounded-lg border border-stone-200 text-center">
@@ -170,29 +201,62 @@
             btnLearn.addEventListener('click', () => switchView('learn'));
             btnPractice.addEventListener('click', () => switchView('practice'));
 
-            // Exemplo de quiz para iqueção (substitua pelas suas questões)
+            // Quiz de inequações para 8º ano
             const quizData = [
                 {
-                    question: "Qual é o primeiro passo para resolver uma iqueção?",
-                    answer: "Ler o enunciado com atenção",
+                    question: "Resolva: x + 4 &gt; 10",
+                    answer: "x > 6",
                     options: [
-                        "Chutar a resposta",
-                        "Ler o enunciado com atenção",
-                        "Copiar do colega",
-                        "Ignorar o problema"
+                        "x > 14",
+                        "x > 6",
+                        "x < 6",
+                        "x < 14"
                     ],
-                    explanation: "Ler o enunciado é fundamental para entender o que está sendo pedido."
+                    explanation: "Subtraia 4 dos dois lados: x > 10 - 4 ⇒ x > 6."
                 },
                 {
-                    question: "Se uma iqueção pede para encontrar o valor de x em x + 5 = 10, qual o valor de x?",
-                    answer: "5",
+                    question: "Resolva: 2x ≤ 8",
+                    answer: "x ≤ 4",
                     options: [
-                        "10",
-                        "15",
-                        "5",
-                        "0"
+                        "x ≥ 4",
+                        "x ≤ 4",
+                        "x < 4",
+                        "x > 4"
                     ],
-                    explanation: "x + 5 = 10 → x = 10 - 5 → x = 5."
+                    explanation: "Divida ambos os lados por 2: x ≤ 8/2 ⇒ x ≤ 4."
+                },
+                {
+                    question: "Resolva: -3x < 12",
+                    answer: "x > -4",
+                    options: [
+                        "x < -4",
+                        "x > -4",
+                        "x > 4",
+                        "x < 4"
+                    ],
+                    explanation: "Divida por -3 e inverta o sinal: x > -4."
+                },
+                {
+                    question: "Qual a solução da inequação x - 7 ≥ 0?",
+                    answer: "x ≥ 7",
+                    options: [
+                        "x ≤ 7",
+                        "x ≥ 7",
+                        "x < 7",
+                        "x > 0"
+                    ],
+                    explanation: "Some 7 aos dois lados: x ≥ 0 + 7 ⇒ x ≥ 7."
+                },
+                {
+                    question: "Resolva: 5x + 2 > 17",
+                    answer: "x > 3",
+                    options: [
+                        "x > 3",
+                        "x < 3",
+                        "x > 5",
+                        "x < 5"
+                    ],
+                    explanation: "5x > 15 ⇒ x > 3."
                 }
             ];
 
@@ -223,7 +287,7 @@
 
                 const questionData = shuffledQuizData[currentQuestionIndex];
                 document.getElementById('question-progress').textContent = `Questão ${currentQuestionIndex + 1} de ${shuffledQuizData.length}`;
-                document.getElementById('question-text').textContent = questionData.question;
+                document.getElementById('question-text').innerHTML = questionData.question;
 
                 const optionsContainer = document.getElementById('options-container');
                 optionsContainer.innerHTML = '';
