--- a/ique.html
+++ b/ique.html
@@ -256,7 +256,139 @@
                         "x > 5",
                         "x < 5"
                     ],
-                    explanation: "5x > 15 ⇒ x > 3."
+                    explanation: "5x + 2 > 17 ⇒ 5x > 15 ⇒ x > 3."
+                },
+                {
+                    question: "Resolva: x/2 ≤ 6",
+                    answer: "x ≤ 12",
+                    options: [
+                        "x ≥ 12",
+                        "x ≤ 12",
+                        "x < 3",
+                        "x > 3"
+                    ],
+                    explanation: "Multiplique ambos os lados por 2: x ≤ 12."
+                },
+                {
+                    question: "Resolva: 4 - x > 1",
+                    answer: "x < 3",
+                    options: [
+                        "x > 3",
+                        "x < 3",
+                        "x > -3",
+                        "x < -3"
+                    ],
+                    explanation: "4 - x > 1 ⇒ -x > -3 ⇒ x < 3 (inverte o sinal ao dividir por -1)."
+                },
+                {
+                    question: "Resolva: 2x + 5 ≥ 9",
+                    answer: "x ≥ 2",
+                    options: [
+                        "x ≥ 2",
+                        "x ≤ 2",
+                        "x > 7",
+                        "x < 7"
+                    ],
+                    explanation: "2x + 5 ≥ 9 ⇒ 2x ≥ 4 ⇒ x ≥ 2."
+                },
+                {
+                    question: "Resolva: 7x < 21",
+                    answer: "x < 3",
+                    options: [
+                        "x > 3",
+                        "x < 3",
+                        "x > 7",
+                        "x < 7"
+                    ],
+                    explanation: "7x < 21 ⇒ x < 3."
+                },
+                {
+                    question: "Resolva: x/3 + 2 > 5",
+                    answer: "x > 9",
+                    options: [
+                        "x < 9",
+                        "x > 9",
+                        "x > 1",
+                        "x < 1"
+                    ],
+                    explanation: "x/3 + 2 > 5 ⇒ x/3 > 3 ⇒ x > 9."
+                },
+                {
+                    question: "Resolva: -x ≥ -8",
+                    answer: "x ≤ 8",
+                    options: [
+                        "x ≥ 8",
+                        "x ≤ 8",
+                        "x > 8",
+                        "x < 8"
+                    ],
+                    explanation: "Multiplique por -1 e inverta o sinal: x ≤ 8."
+                },
+                {
+                    question: "Resolva: 3x - 4 ≤ 2x + 5",
+                    answer: "x ≤ 9",
+                    options: [
+                        "x ≥ 9",
+                        "x ≤ 9",
+                        "x > 9",
+                        "x < 9"
+                    ],
+                    explanation: "3x - 4 ≤ 2x + 5 ⇒ x ≤ 9."
+                },
+                {
+                    question: "Resolva: 2(x - 1) > 6",
+                    answer: "x > 4",
+                    options: [
+                        "x > 4",
+                        "x < 4",
+                        "x > 3",
+                        "x < 3"
+                    ],
+                    explanation: "2(x - 1) > 6 ⇒ x - 1 > 3 ⇒ x > 4."
+                },
+                {
+                    question: "Resolva: 5 - 2x < 1",
+                    answer: "x > 2",
+                    options: [
+                        "x < 2",
+                        "x > 2",
+                        "x < -2",
+                        "x > -2"
+                    ],
+                    explanation: "5 - 2x < 1 ⇒ -2x < -4 ⇒ x > 2."
+                },
+                {
+                    question: "Resolva: x + x > 10",
+                    answer: "x > 5",
+                    options: [
+                        "x > 5",
+                        "x < 5",
+                        "x > 10",
+                        "x < 10"
+                    ],
+                    explanation: "x + x > 10 ⇒ 2x > 10 ⇒ x > 5."
+                },
+                {
+                    question: "Resolva: 8x ≥ 16",
+                    answer: "x ≥ 2",
+                    options: [
+                        "x ≥ 2",
+                        "x ≤ 2",
+                        "x > 8",
+                        "x < 8"
+                    ],
+                    explanation: "8x ≥ 16 ⇒ x ≥ 2."
+                },
+                {
+                    question: "Resolva: x/4 < 2",
+                    answer: "x < 8",
+                    options: [
+                        "x > 8",
+                        "x < 8",
+                        "x > 2",
+                        "x < 2"
+                    ],
+                    explanation: "x/4 < 2 ⇒ x < 8."
                 }
             ];
 
