--- a/ique.html
+++ b/ique.html
@@ -201,18 +201,30 @@
             btnLearn.addEventListener('click', () => switchView('learn'));
             btnPractice.addEventListener('click', () => switchView('practice'));
 
-            // Quiz de inequações para 8º ano
+            // Quiz de inequações para 8º ano - 20 questões (5 fáceis, 10 médias, 5 difíceis)
             const quizData = [
+                // FÁCEIS (5)
                 {
-                    question: "Resolva: x + 4 &gt; 10",
-                    answer: "x > 6",
+                    question: "Resolva: x + 2 > 5",
+                    answer: "x > 3",
+                    options: [
+                        "x > 3",
+                        "x < 3",
+                        "x > 7",
+                        "x < 7"
+                    ],
+                    explanation: "x + 2 > 5 ⇒ x > 3."
+                },
+                {
+                    question: "Resolva: x - 4 < 10",
+                    answer: "x < 14",
                     options: [
                         "x > 14",
+                        "x < 14",
                         "x > 6",
-                        "x < 6",
-                        "x < 14"
+                        "x < 6"
                     ],
-                    explanation: "Subtraia 4 dos dois lados: x > 10 - 4 ⇒ x > 6."
+                    explanation: "x - 4 < 10 ⇒ x < 14."
                 },
                 {
                     question: "Resolva: 2x ≤ 8",
@@ -223,7 +235,42 @@
                         "x < 4",
                         "x > 4"
                     ],
-                    explanation: "Divida ambos os lados por 2: x ≤ 8/2 ⇒ x ≤ 4."
+                    explanation: "2x ≤ 8 ⇒ x ≤ 4."
+                },
+                {
+                    question: "Resolva: x/2 ≥ 3",
+                    answer: "x ≥ 6",
+                    options: [
+                        "x ≥ 6",
+                        "x ≤ 6",
+                        "x > 3",
+                        "x < 3"
+                    ],
+                    explanation: "x/2 ≥ 3 ⇒ x ≥ 6."
+                },
+                {
+                    question: "Resolva: x - 1 ≤ 9",
+                    answer: "x ≤ 10",
+                    options: [
+                        "x ≥ 10",
+                        "x ≤ 10",
+                        "x > 8",
+                        "x < 8"
+                    ],
+                    explanation: "x - 1 ≤ 9 ⇒ x ≤ 10."
+                },
+
+                // MÉDIAS (10)
+                {
+                    question: "Resolva: x + 4 > 10",
+                    answer: "x > 6",
+                    options: [
+                        "x > 14",
+                        "x > 6",
+                        "x < 6",
+                        "x < 14"
+                    ],
+                    explanation: "x + 4 > 10 ⇒ x > 6."
                 },
                 {
                     question: "Resolva: -3x < 12",
@@ -245,7 +292,7 @@
                         "x < 7",
                         "x > 0"
                     ],
-                    explanation: "Some 7 aos dois lados: x ≥ 0 + 7 ⇒ x ≥ 7."
+                    explanation: "x - 7 ≥ 0 ⇒ x ≥ 7."
                 },
                 {
                     question: "Resolva: 5x + 2 > 17",
@@ -267,7 +314,7 @@
                         "x < 3",
                         "x > 3"
                     ],
-                    explanation: "Multiplique ambos os lados por 2: x ≤ 12."
+                    explanation: "x/2 ≤ 6 ⇒ x ≤ 12."
                 },
                 {
                     question: "Resolva: 4 - x > 1",
@@ -324,6 +371,8 @@
                     ],
                     explanation: "Multiplique por -1 e inverta o sinal: x ≤ 8."
                 },
+
+                // DIFÍCEIS (5)
                 {
                     question: "Resolva: 3x - 4 ≤ 2x + 5",
                     answer: "x ≤ 9",
@@ -389,6 +438,50 @@
                         "x < 2"
                     ],
                     explanation: "x/4 < 2 ⇒ x < 8."
+                },
+                {
+                    question: "Resolva: 2x - 3 ≥ x + 4",
+                    answer: "x ≥ 7",
+                    options: [
+                        "x ≥ 7",
+                        "x ≤ 7",
+                        "x > 1",
+                        "x < 1"
+                    ],
+                    explanation: "2x - 3 ≥ x + 4 ⇒ x ≥ 7."
+                },
+                {
+                    question: "Resolva: -2(x - 5) < 8",
+                    answer: "x > 1",
+                    options: [
+                        "x > 1",
+                        "x < 1",
+                        "x > -1",
+                        "x < -1"
+                    ],
+                    explanation: "-2(x - 5) < 8 ⇒ x > 1."
+                },
+                {
+                    question: "Resolva: 4x + 7 > 3x + 12",
+                    answer: "x > 5",
+                    options: [
+                        "x > 5",
+                        "x < 5",
+                        "x > 12",
+                        "x < 12"
+                    ],
+                    explanation: "4x + 7 > 3x + 12 ⇒ x > 5."
+                },
+                {
+                    question: "Resolva: 6 - x ≤ 2x",
+                    answer: "x ≥ 2",
+                    options: [
+                        "x ≥ 2",
+                        "x ≤ 2",
+                        "x > 4",
+                        "x < 4"
+                    ],
+                    explanation: "6 - x ≤ 2x ⇒ 6 ≤ 3x ⇒ x ≥ 2."
                 }
             ];
 
