--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             <a href="port.html" class="menu-btn px-8 py-5 bg-blue-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-blue-800 transition-colors flex items-center justify-center gap-3">
                 <span>📖 Orações Coordenadas - Português</span>
             </a>
+            <a href="poligonos.html" class="menu-btn px-8 py-5 bg-cyan-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-cyan-800 transition-colors flex items-center justify-center gap-3">
+                <span>🔷 Polígonos - Mat II</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
