--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             <a href="poligonos.html" class="menu-btn px-8 py-5 bg-cyan-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-cyan-800 transition-colors flex items-center justify-center gap-3">
                 <span>🔷 Polígonos - Mat II</span>
             </a>
+            <a href="plantas.html" class="menu-btn px-8 py-5 bg-green-700 text-white text-xl font-semibold rounded-lg shadow hover:bg-green-800 transition-colors flex items-center justify-center gap-3">
+                <span>🌱 Reino das Plantas - 7º Ano (Sofia)</span>
+            </a>
         </div>
         <footer class="mt-10 text-slate-400 text-sm">
             Para alunos do <strong>8º ano</strong> &middot; Desenvolvido para facilitar seus estudos!
